--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Your Name</title>
+<title>Fionn Gavin</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
-  <h1>Your Name</h1>
-  <p>Computer Science Student • Developer</p>
+  <h1>Fionn Gavin</h1>
+  <p>Computer Science Student • Trinity College Dublin</p>
 </header>
 <section id="projects">
   <h2>Projects</h2>
@@ -18,10 +18,10 @@
 </section>
 <section id="about">
   <h2>About Me</h2>
-  <p>Write your bio here.</p>
+  <p></p>
 </section>
 <footer>
-  <p>Contact: email@example.com</p>
+  <p>Contact: fionngavin48@gmail.com</p>
 </footer>
 </body>
 </html>
