--- a/index.html
+++ b/index.html
@@ -1,27 +1,104 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Fionn Gavin</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Fionn Gavin | CS Student</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<header>
-  <h1>Fionn Gavin</h1>
-  <p>Computer Science Student • Trinity College Dublin</p>
-</header>
-<section id="projects">
-  <h2>Projects</h2>
-  <ul>
+<div class="grain"></div>
+<div class="container">
+  <header>
+    <div class="header-content">
+      <h1 class="glitch" data-text="FIONN GAVIN">FIONN GAVIN</h1>
+      <div class="subtitle-wrapper">
+        <p class="subtitle">Second Year Computer Science Student</p>
+        <p class="university">Trinity College Dublin</p>
+      </div>
+      <div class="header-links">
+        <a href="https://github.com/fionngavin" target="_blank" class="link-btn">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+          </svg>
+          GitHub
+        </a>
+        <a href="mailto:fgavin@tcd.ie" class="link-btn">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+            <polyline points="22,6 12,13 2,6"/>
+          </svg>
+          Email
+        </a>
+      </div>
+    </div>
+  </header>
 
-  </ul>
-</section>
-<section id="about">
-  <h2>About Me</h2>
-  <p></p>
-</section>
-<footer>
-  <p>Contact: fionngavin48@gmail.com</p>
-</footer>
+  <section id="about">
+    <h2 class="section-title">
+      <span class="bracket">[</span>
+      ABOUT
+      <span class="bracket">]</span>
+    </h2>
+    <div class="about-content">
+      <p class="about-text">Currently pursuing Computer Science at Trinity College Dublin, focusing on software development, algorithms, and modern web technologies. Passionate about building elegant solutions to complex problems and continuously expanding my technical skillset.</p>
+    </div>
+  </section>
+
+  <section id="projects">
+    <h2 class="section-title">
+      <span class="bracket">[</span>
+      PROJECTS
+      <span class="bracket">]</span>
+    </h2>
+    <div class="projects-grid">
+      <div class="project-card">
+        <div class="project-header">
+          <h3 class="project-title">Project Name</h3>
+          <span class="project-tag">TAG</span>
+        </div>
+        <p class="project-description">Brief description of your project. What it does, technologies used, and what problem it solves.</p>
+        <a href="#" class="project-link" target="_blank">View Project →</a>
+      </div>
+
+      <div class="project-card">
+        <div class="project-header">
+          <h3 class="project-title">Project Name</h3>
+          <span class="project-tag">TAG</span>
+        </div>
+        <p class="project-description">Brief description of your project. What it does, technologies used, and what problem it solves.</p>
+        <a href="#" class="project-link" target="_blank">View Project →</a>
+      </div>
+
+      <div class="project-card">
+        <div class="project-header">
+          <h3 class="project-title">Project Name</h3>
+          <span class="project-tag">TAG</span>
+        </div>
+        <p class="project-description">Brief description of your project. What it does, technologies used, and what problem it solves.</p>
+        <a href="#" class="project-link" target="_blank">View Project →</a>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3 class="footer-title">CONNECT</h3>
+        <div class="footer-links">
+          <a href="mailto:fgavin@tcd.ie">fgavin@tcd.ie</a>
+          <a href="https://github.com/fionngavin" target="_blank">github.com/fionngavin</a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <p class="footer-copy">© 2026 Fionn Gavin</p>
+        <p class="footer-location">Dublin, Ireland</p>
+      </div>
+    </div>
+  </footer>
+</div>
 </body>
 </html>
