--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <span class="bracket">]</span>
     </h2>
     <div class="about-content">
-      <p class="about-text">Currently pursuing Computer Science at Trinity College Dublin, focusing on software development, algorithms, and modern web technologies. Passionate about building elegant solutions to complex problems and continuously expanding my technical skillset.</p>
+      <p class="about-text">First Class Honours student at Trinity College Dublin. Second-year studying Integrated Computer Science. Find out more about me below.</p>
     </div>
   </section>
 
