--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header-content">
       <h1 class="glitch" data-text="FIONN GAVIN">FIONN GAVIN</h1>
       <div class="subtitle-wrapper">
-        <p class="subtitle">Second Year <span class="dot">•</span> Computer Science Student</p>
+        <p class="subtitle">Second Year Student <span class="dot">•</span> Integrated Computer Science</p>
         <p class="university">Trinity College Dublin</p>
       </div>
       <div class="header-links">
@@ -32,7 +32,7 @@
           </svg>
           LinkedIn
         </a>
-        <a href="mailto:fgavin@tcd.ie" class="link-btn">
+        <a href="/cdn-cgi/l/email-protection#fb9d9c9a8d9295bb8f989fd5929e" class="link-btn">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
             <polyline points="22,6 12,13 2,6"/>
@@ -50,7 +50,7 @@
       <span class="bracket">]</span>
     </h2>
     <div class="about-content">
-      <p class="about-text">First Class Honours student at Trinity College Dublin. Second-year studying Integrated Computer Science. Find out more about me below.</p>
+      <p class="about-text">Second-year Computer Science student at Trinity College Dublin with First Class Honours, passionate about cybersecurity, artificial intelligence, quantum computing, and computer architecture. Experience includes penetration testing internship at NCC Group and serving as Trinity Hall JCR Technology Officer. Active member of DUBC Rowing Senior Squad, balancing 20 hours weekly of training with academic excellence. Consistently recognized for technical innovation—from achieving maximum marks in flight data systems to placing top 40 nationally in the DLT Computational Thinking Competition. Actively seeking opportunities to contribute to cutting-edge technology initiatives and gain hands-on experience in advanced computing systems.</p>
     </div>
   </section>
 
@@ -95,10 +95,6 @@
       <div class="footer-section">
         <h3 class="footer-title">CONNECT</h3>
         <div class="footer-links">
-          <a href="mailto:fgavin@tcd.ie">fgavin@tcd.ie</a>
+          <a href="/cdn-cgi/l/email-protection#93f5f4f2e5fafdd3e7f0f7bdfaf6"><span class="__cf_email__" data-cfemail="03656462756a6d437760672d6a66">[email&#160;protected]</span></a>
           <a href="https://github.com/fionngavin" target="_blank">github.com/fionngavin</a>
-          <a href="https://linkedin.com/in/fionngavin" target="_blank">linkedin.com/in/fionngavin</a>
-        </div>
-      </div>
-      <div class="footer-section">
-        <p
+          <a hre
