--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <span class="bracket">]</span>
     </h2>
     <div class="about-content">
-      <p class="about-text">Second-year Computer Science student at Trinity College Dublin with First Class Honours, passionate about cybersecurity, artificial intelligence, quantum computing, and computer architecture. Experience includes penetration testing internship at NCC Group and serving as Trinity Hall JCR Technology Officer. Active member of DUBC Rowing Senior Squad, balancing 20 hours weekly of training with academic excellence. Consistently recognized for technical innovation—from achieving maximum marks in flight data systems to placing top 40 nationally in the DLT Computational Thinking Competition. Actively seeking opportunities to contribute to cutting-edge technology initiatives and gain hands-on experience in advanced computing systems.</p>
+      <p class="about-text">First class honours studnet at Trinity College Dublin. Second-year studying Integrated Computer Science. Find out more about me and my work below. </p>
     </div>
   </section>
 
@@ -96,5 +96,5 @@
         <h3 class="footer-title">CONNECT</h3>
         <div class="footer-links">
           <a href="/cdn-cgi/l/email-protection#93f5f4f2e5fafdd3e7f0f7bdfaf6"><span class="__cf_email__" data-cfemail="03656462756a6d437760672d6a66">[email&#160;protected]</span></a>
-          <a href="https://github.com/fionngavin" target="_blank">github.com/fionngavin</a>
+          <a href="https://github.com/fionngavin48" target="_blank">github.com/fionngavin48</a>
           <a hre
