--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       <div class="project-card">
         <div class="project-header">
           <h3 class="project-title">Project Name</h3>
-          <span class="project-tag">TAG</span>
+          <span class="project-tag">HTML, CSS</span>
         </div>
-        <p class="project-description">Brief description of your project. What it does, technologies used, and what problem it solves.</p>
-        <a href="#" class="project-link" target="_blank">View Project →</a>
+        <p class="project-description">The code for my personal portfolio webpage that you are reading right now!</p>
+        <a href="https://github.com/fionngavin48/fionngavin48.github.io" class="project-link" target="_blank">View Project →</a>
       </div>
 
       <div class="project-card">
