--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <div class="projects-grid">
       <div class="project-card">
         <div class="project-header">
-          <h3 class="project-title">Project Name</h3>
+          <h3 class="project-title">My Webpage</h3>
           <span class="project-tag">HTML, CSS</span>
         </div>
-        <p class="project-description">The code for my personal portfolio webpage that you are reading right now!</p>
+        <p class="project-description">All the code for my personal portfolio webpage that you are reading right now!</p>
         <a href="https://github.com/fionngavin48/fionngavin48.github.io" class="project-link" target="_blank">View Project →</a>
       </div>
 
