--- a/index.html
+++ b/index.html
@@ -62,10 +62,14 @@
     </h2>
     <div class="projects-grid">
       <div class="project-card">
-        <div class="project-header">
-          <h3 class="project-title">My Webpage</h3>
-          <span class="project-tag">HTML, CSS</span>
-        </div>
+        
+      <div class="project-header">
+        <h3 class="project-title">My Webpage</h3>
+        <div class="project-tags">
+          <span class="project-tag">HTML</span>
+          <span class="project-tag">CSS</span>
+          </div>
+      </div>
         <p class="project-description">All the code for my personal portfolio webpage that you are reading right now!</p>
         <a href="https://github.com/fionngavin48/fionngavin48.github.io" class="project-link" target="_blank">View Project →</a>
       </div>
