Update index.html to include IBM project for project 2 header

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="project-card">
         
       <div class="project-header">
-        <h3 class="project-title">My Webpage</h3>
+        <h3 class="project-title">MY WEBPAGE</h3>
         <div class="project-tags">
           <span class="project-tag">HTML</span>
           <span class="project-tag">CSS</span>
@@ -76,11 +76,11 @@
 
       <div class="project-card">
         <div class="project-header">
-          <h3 class="project-title">Project Name</h3>
-          <span class="project-tag">TAG</span>
+          <h3 class="project-title">IBM MCP SERVER VULNERABILITY SCANNER</h3>
+          <span class="project-tag">Python</span>
         </div>
-        <p class="project-description">Brief description of your project. What it does, technologies used, and what problem it solves.</p>
-        <a href="#" class="project-link" target="_blank">View Project →</a>
+        <p class="project-description">An open-source vulnerability scanner implemented as an MCP server to validate source code and deploy instances of MCP servers before product deployment. Developed for IBM as my second year final software engineering project. </p>
+        <a href="https://github.com/fionngavin48" class="project-link" target="_blank">View Project →</a>
       </div>
 
       <div class="project-card">
