--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 <body>
 <div class="grain"></div>
 <div class="tooltip" id="copyTooltip">Copied to clipboard!</div>
+<button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+  <svg class="sun-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+    <circle cx="12" cy="12" r="5"/>
+    <line x1="12" y1="1" x2="12" y2="3"/>
+    <line x1="12" y1="21" x2="12" y2="23"/>
+    <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
+    <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
+    <line x1="1" y1="12" x2="3" y2="12"/>
+    <line x1="21" y1="12" x2="23" y2="12"/>
+    <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
+    <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
+  </svg>
+  <svg class="moon-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+    <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+  </svg>
+</button>
 <div class="container">
   <header>
     <div class="header-content">
@@ -114,6 +130,7 @@
 </div>
 
 <script>
+// Email copy functionality
 document.getElementById('emailBtn').addEventListener('click', function(e) {
   e.preventDefault();
   
@@ -135,6 +152,23 @@ document.getElementById('emailBtn').addEventListener('click', function(e) {
       tooltip.classList.remove('show');
     }, 2000);
   });
+});
+
+// Theme toggle functionality
+const themeToggle = document.getElementById('themeToggle');
+const body = document.body;
+
+// Check for saved theme preference or default to 'dark'
+const currentTheme = localStorage.getItem('theme') || 'dark';
+body.setAttribute('data-theme', currentTheme);
+
+// Toggle theme
+themeToggle.addEventListener('click', function() {
+  const currentTheme = body.getAttribute('data-theme');
+  const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+  
+  body.setAttribute('data-theme', newTheme);
+  localStorage.setItem('theme', newTheme);
 });
 </script>
 </body>
