--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
 
       <div class="project-card">
         <div class="project-header">
-          <h3 class="project-title">Project Name</h3>
-          <span class="project-tag">TAG</span>
+          <h3 class="project-title">Flight Data Project</h3>
+          <div class="project-tags">
+          <span class="project-tag">Processing 4</span>
+          <span class="project-tag">Java</span>
+          </div>
         </div>
-        <p class="project-description">Brief description of your project. What it does, technologies used, and what problem it solves.</p>
-        <a href="#" class="project-link" target="_blank">View Project →</a>
+        <p class="project-description">My first year team project to implement a system and front end UI to sort and display flight information from large datasets of data from US airports.</p>
+        <a href="https://github.com/kearnsj5/flight-data-project" class="project-link" target="_blank">View Project →</a>
       </div>
     </div>
   </section>
