--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div class="project-header">
           <h3 class="project-title">IBM MCP SERVER VULNERABILITY SCANNER</h3>
           <span class="project-tag">Python</span>
+           </div>
         </div>
         <p class="project-description">An open-source vulnerability scanner implemented as an MCP server to validate source code and deploy instances of MCP servers before product deployment. Developed for IBM as my second year final software engineering project. </p>
         <a href="https://github.com/fionngavin48" class="project-link" target="_blank">View Project →</a>
