--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <!-- Site Settings Dropdown -->
 <div class="site-settings">
   <button class="settings-toggle" id="settingsToggle" aria-label="Site settings">
-    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
       <circle cx="12" cy="12" r="3"/>
-      <path d="M12 1v3m0 16v3M4.22 4.22l2.12 2.12m11.32 11.32l2.12 2.12M1 12h3m16 0h3M4.22 19.78l2.12-2.12m11.32-11.32l2.12-2.12"/>
+      <path d="M12 1v6m0 6v6m5.196-13.928l-4.242 4.242m0 5.656l4.242 4.242M23 12h-6m-6 0H1m18.928-5.196l-4.242 4.242m-5.656 0l-4.242-4.242"/>
     </svg>
     <span>Site Settings</span>
   </button>
