--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 <body>
 <div class="grain"></div>
 <div class="tooltip" id="copyTooltip">Copied to clipboard!</div>
-<button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
-</button>
 
 <!-- Site Settings Dropdown -->
 <div class="site-settings">
@@ -27,7 +25,7 @@
   <div class="settings-dropdown" id="settingsDropdown">
     <div class="settings-item">
       <span class="settings-label">Theme</span>
-      <button class="theme-toggle-inline" id="themeToggle" aria-label="Toggle theme">
+      <button class="theme-toggle-inline" id="themeToggleInline" aria-label="Toggle theme">
         <div class="toggle-track">
           <div class="toggle-thumb"></div>
         </div>
@@ -183,7 +181,7 @@ document.addEventListener('click', function(e) {
 });
 
 // Theme toggle functionality
-const themeToggle = document.getElementById('themeToggle');
+const themeToggleInline = document.getElementById('themeToggleInline');
 const themeText = document.getElementById('themeText');
 const body = document.body;
 
@@ -193,8 +191,7 @@ body.setAttribute('data-theme', currentTheme);
 updateThemeText(currentTheme);
 
 // Toggle theme
-themeToggle.addEventListener('click', function() {
-themeToggle.addEventListener('click', function(e) {
+themeToggleInline.addEventListener('click', function(e) {
   e.stopPropagation();
   const currentTheme = body.getAttribute('data-theme');
   const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
