--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           <h3 class="project-title">IBM MCP SERVER VULNERABILITY SCANNER</h3>
           <span class="project-tag">Python</span>
         </div>
-        <p class="project-description">An open-source vulnerability scanner implemented as an MCP server to validate source code and deploy instances of MCP servers before product deployment. Developed for IBM as my second year final software engineering project. </p>
-        <a href="https://github.com/fionngavin48" class="project-link" target="_blank">View Project →</a>
+        <p class="project-description">An open-source Model Context Protocol (MCP) gateway and registry that centralizes management of AI tools, resources, and prompts for LLM applications. Developed as a collaborative second-year software engineering project with IBM's MCP Context Forge initiative, focusing on security validation, multi-protocol transport, and production-grade deployment infrastructure. </p>
+        <a href="https://github.com/IBM/mcp-context-forge" class="project-link" target="_blank">View Project →</a>
       </div>
 
       <div class="project-card">
