Update IBM description index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <span class="project-tag">Security</span>
           <span class="project-tag">FastAPI</span>
         </div>
-        <p class="project-description">An open-source Model Context Protocol (MCP) gateway and registry that centralizes management of AI tools, resources, and prompts for LLM applications. Developed as a collaborative second-year software engineering project with IBM's MCP Context Forge initiative, focusing on security validation, multi-protocol transport, and production-grade deployment infrastructure. </p>
+        <p class="project-description">An open-source Model Context Protocol (MCP) gateway and registry that centralizes management of AI tools, resources, and prompts for LLM applications. Developed for my collaborative second-year software engineering project with IBM. Focusing on security validation, multi-protocol transport, and production-grade deployment infrastructure. </p>
         <a href="https://github.com/IBM/mcp-context-forge" class="project-link" target="_blank">View Project →</a>
       </div>
 
