fix tag format index.html

--- a/index.html
+++ b/index.html
@@ -99,17 +99,19 @@
       </div>
 
       <div class="project-card">
-        <div class="project-header">
-          <h3 class="project-title">IBM MCP SERVER VULNERABILITY SCANNER</h3>
-          <span class="project-tag">Python</span>
-          <span class="project-tag">Model Context Protocol</span>
-          <span class="project-tag">Security</span>
-          <span class="project-tag">FastAPI</span>
-        </div>
-        <p class="project-description">An open-source Model Context Protocol (MCP) gateway and registry that centralizes management of AI tools, resources, and prompts for LLM applications. Developed for my collaborative second-year software engineering project with IBM. Focusing on security validation, multi-protocol transport, and production-grade deployment infrastructure. </p>
-        <a href="https://github.com/IBM/mcp-context-forge" class="project-link" target="_blank">View Project →</a>
-      </div>
-
+  <div class="project-header">
+    <h3 class="project-title">IBM MCP SERVER VULNERABILITY SCANNER</h3>
+    <div class="project-tags">
+      <span class="project-tag">Python</span>
+      <span class="project-tag">Model Context Protocol</span>
+      <span class="project-tag">Security</span>
+      <span class="project-tag">FastAPI</span>
+    </div>
+  </div>
+  <p class="project-description">An open-source Model Context Protocol (MCP) gateway and registry that centralizes management of AI tools, resources, and prompts for LLM applications. Developed for my collaborative second-year software engineering project with IBM. Focusing on security validation, multi-protocol transport, and production-grade deployment infrastructure. </p>
+  <a href="https://github.com/IBM/mcp-context-forge" class="project-link" target="_blank">View Project →</a>
+</div>
+      
       <div class="project-card">
         <div class="project-header">
           <h3 class="project-title">Flight Data Project</h3>
